<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/primary">
	<LinearLayout
			android:id="@+id/firstLinearLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_margin="@dimen/four_dp">

		<!-- FIRST CARD VIEW -->
		<androidx.cardview.widget.CardView
				android:id="@+id/cardViewCalcIc"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_margin="@dimen/four_dp"
				android:layout_height="50dp"
				android:background="@color/white"
				android:backgroundTint="@color/primary"
				app:cardCornerRadius="@dimen/corner_radius_30">

				<TextView
						android:gravity="center|center_horizontal"
						android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/course_ic"
						android:textAllCaps="true"
						android:textStyle="bold"
						android:textColor="@color/white"
						app:drawableStartCompat="@drawable/ic_black_add_24"/>


		</androidx.cardview.widget.CardView>

		<!-- SECOND CARD VIEW -->
		<androidx.cardview.widget.CardView
				android:id="@+id/cardViewCalcBch"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:background="@color/white"
				android:layout_margin="@dimen/four_dp"
				android:layout_height="50dp"
				android:backgroundTint="@color/primary"
				app:cardCornerRadius="@dimen/corner_radius_30"
		>
				<TextView
						android:gravity="center|center_horizontal"
						android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:drawableStartCompat="@drawable/ic_black_add_24"
						android:text="@string/course_bch"
						android:textColor="@color/white"
						android:textAllCaps="true"
						android:textStyle="bold"/>
		</androidx.cardview.widget.CardView>

	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_margin="@dimen/four_dp">

		<!-- THIRD CARD VIEW -->
		<androidx.cardview.widget.CardView
				android:id="@+id/cardViewCalcMic"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_margin="@dimen/four_dp"
				android:layout_height="wrap_content"
				android:backgroundTint="@color/primary"
				app:cardCornerRadius="@dimen/corner_radius_30">


				<TextView
						android:gravity="center|center_horizontal"
						android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:drawableStartCompat="@drawable/ic_black_add_24"
						android:text="@string/course_mic"
						android:textColor="@color/white"
						android:textAllCaps="true"
						android:textStyle="bold"/>



		</androidx.cardview.widget.CardView>

		<!-- FOURTH CARD VIEW -->
		<androidx.cardview.widget.CardView
				android:id="@+id/cardViewCalcComp"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_margin="@dimen/four_dp"
				android:backgroundTint="@color/primary"
				android:layout_height="wrap_content">

				<TextView
						android:gravity="center|center_horizontal"
						android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:drawableStartCompat="@drawable/ic_black_add_24"
						android:text="@string/course_comp"
						android:textColor="@color/white"
						android:textAllCaps="true"
						android:textStyle="bold"/>

		</androidx.cardview.widget.CardView>

	</LinearLayout>

	<!-- FOURTH CARD VIEW -->
	<androidx.cardview.widget.CardView
			android:id="@+id/cardViewCalcPe"
			android:layout_width="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="@dimen/four_dp"
			android:backgroundTint="@color/primary"
			android:layout_height="wrap_content">

		<TextView
				android:gravity="center|center_horizontal"
				android:layout_gravity="center_horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:drawableStartCompat="@drawable/ic_black_add_24"
				android:text="@string/course_pe"
				android:textColor="@color/white"
				android:textAllCaps="true"
				android:textStyle="bold"/>

	</androidx.cardview.widget.CardView>


</LinearLayout>