<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="match_parent"
	              android:background="@color/primary"
	              android:gravity="center"
	              android:orientation="vertical">

		<LinearLayout
				android:id="@+id/header_results_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="vertical">

			<com.ou.gpa_calculator.Util.Views.CustomTextView
					android:id="@+id/check_gp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/result_header_text"/>

			<com.ou.gpa_calculator.Util.Views.CustomTextView
					android:id="@+id/results_gpa_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:paddingBottom="24dp"
					android:text="7.42"
					android:textSize="56sp"/>

		</LinearLayout>


		<LinearLayout
				android:id="@+id/credits_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="32dp"
				android:layout_marginRight="32dp"
				android:gravity="center"
				android:orientation="horizontal"
				android:paddingBottom="8dp"
				android:paddingTop="8dp">

			<com.ou.gpa_calculator.Util.Views.CustomTextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:layout_weight="2"
					android:text="@string/result_total_units"
					android:textStyle="bold"/>
			<com.ou.gpa_calculator.Util.Views.CustomTextView
					android:id="@+id/result_total_units"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="16dp"
					android:layout_marginRight="16dp"
					android:text="+26"
					android:textStyle="bold"/>
		</LinearLayout>

		<LinearLayout
				android:id="@+id/point_earned_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="32dp"
				android:layout_marginRight="32dp"
				android:gravity="center"
				android:orientation="horizontal"
				android:paddingBottom="8dp"
				android:paddingTop="8dp">

			<com.ou.gpa_calculator.Util.Views.CustomTextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:layout_weight="2"
					android:text="@string/result_total_gp"
					android:textColor="@color/white"
					android:textStyle="bold"/>

			<com.ou.gpa_calculator.Util.Views.CustomTextView
					android:id="@+id/result_points_earned"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:text="7.46"
					android:textStyle="bold"/>
		</LinearLayout>

		<LinearLayout
				android:id="@+id/point_total_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="32dp"
				android:layout_marginRight="32dp"
				android:gravity="center"
				android:orientation="horizontal"
				android:paddingBottom="8dp"
				android:paddingTop="8dp">

			<com.ou.gpa_calculator.Util.Views.CustomTextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:layout_weight="2"
					android:text="@string/result_total_semester"
					android:textStyle="bold"/>

			<com.ou.gpa_calculator.Util.Views.CustomTextView
					android:id="@+id/result_total_semester"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:text="7.46"
					android:textStyle="bold"/>
		</LinearLayout>

		<LinearLayout
				android:id="@+id/cgpa_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="32dp"
				android:layout_marginRight="32dp"
				android:gravity="center"
				android:orientation="horizontal"
				android:paddingBottom="8dp"
				android:paddingTop="8dp">

			<com.ou.gpa_calculator.Util.Views.CustomTextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:layout_weight="1"
					android:text="@string/result_grade"
					android:textStyle="bold"/>

			<com.ou.gpa_calculator.Util.Views.CustomTextView
					android:id="@+id/result_new_grade"
					android:layout_weight="3"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:text="7.46"
					android:textStyle="bold"/>
		</LinearLayout>

		<br.com.simplepass.loadingbutton.customViews.CircularProgressButton
				android:id="@+id/okay_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:layout_marginBottom="20dp"
				app:spinning_bar_width="4dp"
				app:spinning_bar_color="@color/white"
				app:spinning_bar_padding="6dp"
				android:text="@string/action_done"
				android:background="@color/teal_700"
				android:textColor="@color/white"/>

	</LinearLayout>

</FrameLayout>