<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/primary"
            xmlns:tools="http://schemas.android.com/tools">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">


                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/full_name"
                        app:hintTextColor="@color/black"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                >

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_upName_student"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textCapWords"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/matric_number"
                        app:hintTextColor="@color/black"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                >

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_up_student_matric"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/department"
                        app:hintTextColor="@color/black"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                >

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_up_student_department"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/phone_number"
                        app:hintTextColor="@color/black"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                        app:counterMaxLength="11"
                        app:counterEnabled="true"
                        app:counterTextColor="@color/purple_700"
                >

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_up_student_phoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/enter_password"
                        app:hintTextColor="@color/black"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/black"
                >

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_up_student_Password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword|numberPassword"
                           />

                </com.google.android.material.textfield.TextInputLayout>





                <Button
                        android:id="@+id/signUpButtonStudent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="15dp"
                        android:background="@null"
                        android:text="@string/sign_up"
                        android:textStyle="bold"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="5dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/already_have_an_account"
                            android:textSize="18sp"
                    />

                    <TextView
                            android:id="@+id/signInToStudentLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in"
                            android:textColor="@color/purple_500"
                            android:layout_marginLeft="5dp"
                            android:textSize="18sp"
                            android:layout_marginStart="5dp" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
