<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/primary"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/margin_start_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/student_login"
                  android:textColor="@color/white"
                  android:textSize="18sp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_matric_number"
                app:hintTextColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/studentLoginMatric"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:fontFamily=""/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_password"
                app:hintTextColor="@color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/studentLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>



        <Button
                android:id="@+id/studentLoginIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:background="@null"
                android:text="@string/login"
                android:textStyle="bold"/>

        <Button
                android:id="@+id/studentRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="15dp"
                android:background="@null"
                android:text="Register As A Student"
                android:textStyle="bold"/>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="5dp">

            <TextView
                    android:id="@+id/goToLecturerSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_a_staff"
                    android:textSize="18sp"
            />

            <!--<TextView
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/purple_500"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp" />-->
        </LinearLayout>






    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>